First parts of config handling.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 LIBNAME=libunclog.so
 
-$(LIBNAME): unclog.c
-	$(CC) -Wall -Wextra -pedantic $(CFLAGS) -shared -o $@ $<
+$(LIBNAME): unclog.c unclog_init.c
+	$(CC) -Wall -Wextra -pedantic $(CFLAGS) -shared -fPIC -g -o $@ $^ -linih
 
 clean:
 	rm -f $(LIBNAME)
