Added debugging to Makefile.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,5 +6,8 @@ check: test1
 test1: test1.c
 	$(CC) $(CFLAGS) $(FLAGS) -fPIC -g -o $@ $^ -lunclog
 
+gdb: test1
+	LD_LIBRARY_PATH=../src gdb ./test1
+
 clean:
 	rm -f test1
