--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,7 +4,7 @@ check: test1
 	LD_LIBRARY_PATH=../src ./test1
 
 test1: test1.c
-	$(CC) $(CFLAGS) $(FLAGS) -fPIC -g -o $@ $^ -lunclog
+	$(CC) $(CFLAGS) $(FLAGS) -o $@ $^ -lunclog
 
 gdb: test1
 	LD_LIBRARY_PATH=../src gdb ./test1
