Fix inih inclusion.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,13 +1,11 @@
-FLAGS=-L../src -I../src
-
 check: test1
-	LD_LIBRARY_PATH=../src ./test1
+	LD_LIBRARY_PATH=../src:../inih ./test1
 
 test1: test1.c
-	$(CC) $(CFLAGS) $(FLAGS) -o $@ $^ -lunclog
+	$(CC) $(CFLAGS) -o $@ $^ -lunclog -linih
 
 gdb: test1
-	LD_LIBRARY_PATH=../src gdb ./test1
+	LD_LIBRARY_PATH=../src:../../inih gdb ./test1
 
 clean:
 	rm -f test1
