Simplify build system.

--- a/tests/unclog.ini
+++ b/tests/unclog.ini
@@ -1,7 +1,13 @@
 [Defaults]
 Level=Trace
-Sinks=libunclog_stderr.so
+Details=Source,Message
+Sinks=libunclog_stderr.so,libunclog_file.so
 
-[libunclog_stderr.so]
-Level=Trace
+[libunclog_file.so]
+Level=Critical
 Details=Time,Source,File,Line,Message
+Sources=source1
+File=None
+
+[source1]
+Level=Info
