--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${inih_INCLUDES})
+
 add_library(unclog SHARED
 	unclog.c
 	unclog_global.c
@@ -10,4 +11,8 @@ add_library(unclog SHARED
 	unclog_int.h
 )
 target_link_libraries(unclog pthread inih)
+
+install(TARGETS unclog DESTINATION lib)
+install(FILES unclog.h DESTINATION include)
+
 set(unclog_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}" CACHE STRING "" FORCE)
