--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
+*.lo
+*.o
+*.la
+*.a
+.deps/
+.libs/
+Makefile.in
+Makefile
+
+/m4
+/aclocal.m4
+/autom4te.cache/
+/build-aux/
+/config.h
+/stamp-h1
+/config.h.in
+/config.log
+/config.status
+/configure
+/libtool
+
 *.orig
 *~
-/cscope.*out
-/.ide/
-/inih/
-*.sw[pq]
-/build/
-/staging/
-/documentation/
+*.swp
