--- a/src/inih/Makefile.am
+++ b/src/inih/Makefile.am
@@ -1,2 +1,4 @@
-lib_LIBRARIES = libinih.a
-libinih_a_SOURCES = ini.c
+AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic
+
+noinst_LIBRARIES = libinih.a
+libinih_a_SOURCES = ini.c ini.h
