--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,5 +1,7 @@
-bin_PROGRAMS = test1
-test1_LDADD = ../unclog/libunclog.la
-test1_SOURCES = test1.c
+AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic -I../unclog
 
-TESTS = test1
+check_PROGRAMS = unclog_test_1
+TESTS = unclog_test_1
+
+unclog_test_1_LDADD = ../unclog/libunclog.la
+unclog_test_1_SOURCES = test1.c
