Create properly working in-build stderr sink.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -5,3 +5,6 @@ TESTS = unclog_test_1
 
 unclog_test_1_LDADD = ../unclog/libunclog.la
 unclog_test_1_SOURCES = test1.c
+
+gdb: unclog_test_1
+	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/unclog_test_1
