--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -8,3 +8,6 @@ unclog_test_1_SOURCES = test1.c
 
 gdb: unclog_test_1
 	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/unclog_test_1
+
+valgrind: unclog_test_1
+	LD_LIBRARY_PATH=../unclog/.libs valgrind --leak-check=full --track-origins=yes ./.libs/unclog_test_1
