--- a/src/tests/unclog.ini
+++ b/src/tests/unclog.ini
@@ -5,11 +5,8 @@ Sinks=libunclog_stderr.so,libunclog_file.so
 
 [libunclog_file.so]
 Level=Critical
-Details=Time,Source,File,Line,Message
+Details=Time,Level,Source,File,Line,Message
 File=None
 
-[source1]
-Level=Info
-
-[source-1]
-Level=Fatal
+[libunclog_stderr.so]
+Details=Time,Level,Source,File,Line,Message
