Add testing access to libunclog.

--- a/src/unclog/Makefile.am
+++ b/src/unclog/Makefile.am
@@ -5,4 +5,7 @@ libunclog_la_LIBADD = ../inih/libinih.a
 libunclog_la_SOURCES = unclog.c unclog_config.c unclog_global.c unclog_levels.c unclog_sink.c unclog_source.c unclog_int.h unclog/unclog.h
 libunclog_la_LDFLAGS = -version-info 1:0:0
 
+noinst_LIBRARIES = libunclog_test.a
+libunclog_test_a_SOURCES = unclog_test.c unclog_test.h
+
 nobase_include_HEADERS = unclog/unclog.h
