--- a/src/unclog/Makefile.am
+++ b/src/unclog/Makefile.am
@@ -8,4 +8,4 @@ libunclog_la_LDFLAGS = -version-info 1:0:0
 noinst_LIBRARIES = libunclog_test.a
 libunclog_test_a_SOURCES = unclog_test.c unclog_test.h
 
-nobase_include_HEADERS = unclog/unclog.h
+nobase_include_HEADERS = unclog/unclog.h unclog/unclog_adv.h
