--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,7 +1,7 @@
-AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic -I../unclog
+AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic -I../unclog -lcunit
 
-check_PROGRAMS = unclog_test_1 unclog_test_2 unclog_test_3
-TESTS = unclog_test_2 unclog_test_3
+check_PROGRAMS = unclog_test_1 unclog_test_2 unclog_test_3 unclog_tests_1
+TESTS = unclog_tests_1
 
 unclog_test_1_LDADD = ../unclog/libunclog.la
 unclog_test_1_SOURCES = test1.c
@@ -12,8 +12,11 @@ unclog_test_2_SOURCES = test_open_close.c
 unclog_test_3_LDADD = ../unclog/libunclog.la ../unclog/libunclog_test.a
 unclog_test_3_SOURCES = test_configure.c
 
-gdb: unclog_test_3
-	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/unclog_test_3
+unclog_tests_1_LDADD = ../unclog/libunclog.la
+unclog_tests_1_SOURCES = unclog_tests_1.c
 
-valgrind: unclog_test_1
-	LD_LIBRARY_PATH=../unclog/.libs valgrind --leak-check=full --track-origins=yes ./.libs/unclog_test_1
+gdb: unclog_tests_1
+	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/unclog_tests_1
+
+valgrind: unclog_tests_1
+	LD_LIBRARY_PATH=../unclog/.libs valgrind --leak-check=full --track-origins=yes ./.libs/unclog_tests_1
