--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,13 +1,10 @@
 AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic -I../unclog -lcunit
 
-check_PROGRAMS = unclog_test_1 unclog_test_3 unclog_tests_1
+check_PROGRAMS = unclog_test_1 unclog_tests_1
 TESTS = unclog_tests_1
 
 unclog_test_1_LDADD = ../unclog/libunclog.la
 unclog_test_1_SOURCES = test1.c
-
-unclog_test_3_LDADD = ../unclog/libunclog.la ../unclog/libunclog_test.a
-unclog_test_3_SOURCES = test_configure.c
 
 unclog_tests_1_LDADD = ../unclog/libunclog.la
 unclog_tests_1_SOURCES = unclog_tests_1.c
