Rename internal stderr sink.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -8,10 +8,10 @@ Details=Time,Source,Message,Level
 # the full details set would be Time,Source,File,Line,Message,Level
 
 # define which sinks are configured for message processing
-Sinks=libunclog_stderr.so
+Sinks=stderr
 
-# now configure sink libunclog_stderr.so to have level Debug
-[libunclog_stderr.so]
+# now configure sink stderr to have level Debug
+[stderr]
 Level=Debug
 
 # configure source main to have level Trace
