Added ABI compliance checking.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,3 +31,11 @@ format:
 
 documentation/html/index.html: unclog.doxygen src/unclog/*.c src/unclog/*.h README.md
 	doxygen $< 
+
+abi-check: abi-dumps/unclog-$(VERSION).dump
+	abi-compliance-checker -l unclog -old abi-dumps/unclog-$(PREVIOUS_VERSION).dump -new $<
+
+abi-dumps/unclog-$(VERSION).dump: ./src/unclog/.libs/libunclog.so
+	abi-dumper -o $@ -vnum $(VERSION) -public-headers ./src/unclog/unclog $<
+
+./src/unclog/.libs/libunclog.so: check
