Update example to put out all logging level messages.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -8,11 +8,15 @@ Details=Time,Source,Message,Level
 # the full details set would be Time,Source,File,Line,Message,Level
 
 # define which sinks are configured for message processing
-Sinks=stderr
+Sinks=stderr,file
 
 # now configure sink stderr to have level Debug
 [stderr]
 Level=Debug
+
+[file]
+Level=Trace
+File=herbert.log
 
 # configure source main to have level Trace
 [main]
