Added release information for V0.2-alpha.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -12,11 +12,11 @@ Sinks=stderr,file
 
 # now configure sink stderr to have level Debug
 [stderr]
-Level=Debug
+Level=Warning
 
 [file]
 Level=Trace
-File=herbert.log
+File=unclog.log
 
 # configure source main to have level Trace
 [main]
