--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -12,6 +12,7 @@ unclog_tests_1_SOURCES = unclog_tests_1.c
 gdb: unclog_tests_1
 	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/unclog_tests_1
 
+# Building unclog_tests_t statically so GPROF works properly.
 gprof: unclog_tests_t
 	make -C ../.. check
 	rm -rf gmon.out
