Started complete reimplementation.
The current implementation does not scale well for certain things:
- reconfiguration
- splitting config/settings and runtime data
- handling sources vs sinks
- changing/adding configuration

Reimplement everything with lessons learned from pervious versions.

--- a/src/examples/Makefile.am
+++ b/src/examples/Makefile.am
@@ -8,3 +8,10 @@ example1_LDADD = ../unclog/libunclog.la
 example1_SOURCES = example1.c
 
 examples: example1
+	./example1
+
+gdb: example1
+	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/example1
+
+valgrind: example1
+	LD_LIBRARY_PATH=../unclog/.libs valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./.libs/example1
