--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -1,23 +1,23 @@
-[Defaults]
-# default logging level for sources and sinks that do not have an explicitly set level
+[defaults]
+# default logging level for sources and sinks that do not have an explicitly
+# set level. levels are Fatal, Critical, Error, Warning, Info, Debug and Trace.
 Level=Warning
 
 # most logging sinks can print/store more or less details of a message,
-# reconfigure defaults to not use File and Line information
+# reconfigure defaults to not use File and Line information. the full detail
+# set is Time, Level, Source, File, Line, Message or Full.
 Details=Time,Source,Message,Level
-# the full details set would be Time,Source,File,Line,Message,Level
-
-# define which sinks are configured for message processing
-Sinks=stderr,file
 
 # now configure sink stderr to have level Debug
-[stderr]
+[sink.stderr1]
+Type=stderr
 Level=Warning
 
-[file]
+[sink.file1]
+Type=file
 Level=Trace
 File=unclog.log
 
 # configure source main to have level Trace
-[main]
+[source.main]
 Level=Trace
