Add first parts of config parsing.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -1,7 +1,7 @@
 [defaults]
 # default logging level for sources and sinks that do not have an explicitly
 # set level. levels are Fatal, Critical, Error, Warning, Info, Debug and Trace.
-Level=Warning
+Level=Info
 
 # most logging sinks can print/store more or less details of a message,
 # reconfigure defaults to not use File and Line information. the full detail
@@ -11,7 +11,7 @@ Details=Time,Source,Message,Level
 # now configure sink stderr to have level Debug
 [sink.stderr1]
 Type=stderr
-Level=Warning
+Level=Error
 
 [sink.file1]
 Type=file
