--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -8,8 +8,7 @@ Level=Info
 # set is Time, Level, Source, File, Line, Message or Full.
 Details=Time,Source,Message,Level
 
-# now configure sink stderr to have level Debug
-[sink.stderr1]
+[sink.stderr]
 Type=stderr
 Level=Error
 
@@ -18,6 +17,12 @@ Type=file
 Level=Trace
 File=unclog.log
 
-# configure source main to have level Trace
-[source.main]
+[sink.custom1]
+Level=Warning
+File=testing.log
+
+[source.log1]
+Level=Fatal
+
+[source.log2]
 Level=Trace
