--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -1,4 +1,5 @@
 [defaults]
+Internal=Log
 # default logging level for sources and sinks that do not have an explicitly
 # set level. levels are Fatal, Critical, Error, Warning, Info, Debug and Trace.
 Level=Info
