Readd sink implementations.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -1,5 +1,6 @@
 [defaults]
-Internal=Log
+#Internal=Log
+
 # default logging level for sources and sinks that do not have an explicitly
 # set level. levels are Fatal, Critical, Error, Warning, Info, Debug and Trace.
 Level=Info
