Fix/add/improve sink handling.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -1,5 +1,5 @@
 [defaults]
-Internal=Log
+#Internal=Log
 
 # default logging level for sources and sinks that do not have an explicitly
 # set level. levels are Fatal, Critical, Error, Warning, Info, Debug and Trace.
@@ -10,9 +10,9 @@ Level=Info
 # set is Time, Level, Source, File, Line, Message or Full.
 Details=Time,Source,Message,Level
 
-[sink.stderr]
-Type=stderr
-Level=Error
+#[sink.stderr]
+#Type=stderr
+#Level=Error
 
 [sink.file1]
 Type=file
@@ -20,6 +20,7 @@ Level=Trace
 File=unclog.log
 
 [sink.custom1]
+#Internal=Log
 Level=Warning
 File=testing.log
 
