--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -2,7 +2,6 @@ AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic -I../unclog -lcunit
 
 #check_PROGRAMS = unclog_tests_t unclog_tests_1
 #TESTS = unclog_tests_1
-
 check_PROGRAMS = unclog_tests_t
 
 unclog_tests_t_LDADD = ../unclog/libunclog.la
@@ -11,8 +10,8 @@ unclog_tests_t_SOURCES = unclog_tests_t.c
 #unclog_tests_1_LDADD = ../unclog/libunclog.la
 #unclog_tests_1_SOURCES = unclog_tests_1.c
 
-#gdb: unclog_tests_1
-#	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/unclog_tests_1
+gdb: unclog_tests_t
+	LD_LIBRARY_PATH=../unclog/.libs gdb ./.libs/$<
 
 # Building unclog_tests_t statically so GPROF works properly.
 gprof: unclog_tests_t
@@ -23,5 +22,5 @@ gprof: unclog_tests_t
 	./$< 2>/dev/null
 	gprof ./$< gmon.out | less
 
-#valgrind: unclog_tests_1
-#	LD_LIBRARY_PATH=../unclog/.libs valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./.libs/unclog_tests_1
+valgrind: unclog_tests_t
+	LD_LIBRARY_PATH=../unclog/.libs valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./.libs/$<
