Improve example and fix bugs.

--- a/src/examples/unclog.ini
+++ b/src/examples/unclog.ini
@@ -1,3 +1,5 @@
+# the defaults are used in all sources and sinks when nothing else is defined.
+# when no sinks are defined the stderr sink is used
 [defaults]
 #Internal=Log
 
@@ -10,19 +12,34 @@ Level=Info
 # set is Time, Level, Source, File, Line, Message or Full.
 Details=Time,Source,Message,Level
 
-#[sink.stderr]
+# sections starting with sink start the configuration of a sink, same goes for
+# source. sources and sinks can be freely mixed, the name of the source or sink
+# can be freely choosen
+# for sinks the Type declares the type of the sink, there are two predefined
+# types:
+# - Type=stderr: writes logging information to stderr
+# - Type=file: writes logging information to the file provided with value File.
+#   the file defaults to unclog.log when nothing is specified.
+# - Type=null: discards logging logging information. this can be used to
+#   disable logging altogether: when just not defining any sinks, stderr is
+#   used so an NOP sink has to be used for disabling logging all together
+
+#[sink.null]
+#Type=null
+
+#[sink.s]
 #Type=stderr
 #Level=Error
 
-[sink.file1]
-Type=file
-Level=Trace
-File=unclog.log
+#[sink.logfilesink]
+#Type=file
+#Level=Trace
+#File=unclog.log
 
 [sink.custom1]
+#Internal=Disable
 #Internal=Log
 Level=Warning
-File=testing.log
 
 [source.log1]
 Level=Fatal
