--- a/src/inih/Makefile.am
+++ b/src/inih/Makefile.am
@@ -1,4 +1,4 @@
-AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic
+AM_CFLAGS = --std=c99 -Wall -Wextra -pedantic -fPIC
 
 noinst_LIBRARIES = libinih.a
 libinih_a_SOURCES = ini.c ini.h
